--- a/infra/.env.example
+++ b/infra/.env.example
@@ -12,8 +12,8 @@ FIRST_SUPERUSER_PHONE=+79999999999
 FIRST_SUPERUSER_ADDITIONAL_INFO=Moscow
 FIRST_SUPERUSER_PASSWORD=admin
 
-POSTGRES_USER=smena
-POSTGRES_PASSWORD=smena
-POSTGRES_DB=smena
+POSTGRES_USER=wrest
+POSTGRES_PASSWORD=wrest
+POSTGRES_DB=dbwrest
 POSTGRES_SERVER=localhost
-POSTGRES_PORT=5432
+POSTGRES_PORT=5000
