create container, celery, redis

--- a/infra/.env.example
+++ b/infra/.env.example
@@ -1,19 +1,28 @@
+# Хост веб-сервера FastAPI (0.0.0.0 позволяет принимать соединения со всех интерфейсов).
 WEB_SERVER_HOST=0.0.0.0
+# Порт веб-сервера FastAPI (8888 соответствует порту в docker-compose.yml).
 WEB_SERVER_PORT=8888
+# Токен Telegram-бота для инициализации Bot в main.py и celery_app.py.
 TELEGRAM_BOT_TOKEN=6768757099:AAGxUuI2udPb28kXJvoRLbsjNd4TYtv2Ta4
 
-FIRST_SUPERUSER_FIRST_NAME=Ivan
-FIRST_SUPERUSER_LAST_NAME=Ivanov
-FIRST_SUPERUSER_MIDDLE_NAME=Ivanovich
-FIRST_SUPERUSER_TELEGRAM_ID=1
-FIRST_SUPERUSER_ROLE=ADMIN
-FIRST_SUPERUSER_EMAIL=example@email.com
-FIRST_SUPERUSER_PHONE=+79999999999
-FIRST_SUPERUSER_ADDITIONAL_INFO=Moscow
-FIRST_SUPERUSER_PASSWORD=admin
+# Данные первого суперпользователя для fastadmin.
+FIRST_SUPERUSER_FIRST_NAME=Ivan        # Имя суперпользователя.
+FIRST_SUPERUSER_LAST_NAME=Ivanov       # Фамилия суперпользователя.
+FIRST_SUPERUSER_MIDDLE_NAME=Ivanovich  # Отчество суперпользователя.
+FIRST_SUPERUSER_TELEGRAM_ID=1          # Telegram ID суперпользователя для уведомлений.
+FIRST_SUPERUSER_ROLE=ADMIN             # Роль суперпользователя (ADMIN для полного доступа).
+FIRST_SUPERUSER_EMAIL=example@email.com  # Email суперпользователя.
+FIRST_SUPERUSER_PHONE=+79999999999     # Телефон суперпользователя.
+FIRST_SUPERUSER_ADDITIONAL_INFO=Moscow # Дополнительная информация о суперпользователе.
+FIRST_SUPERUSER_PASSWORD=admin         # Пароль суперпользователя для fastadmin.
 
-POSTGRES_USER=wrest
-POSTGRES_PASSWORD=wrest
-POSTGRES_DB=dbwrest
-POSTGRES_SERVER=localhost
-POSTGRES_PORT=5000
+# Настройки подключения к базе данных PostgreSQL.
+POSTGRES_USER=wrest                    # Имя пользователя PostgreSQL.
+POSTGRES_PASSWORD=wrest                # Пароль пользователя PostgreSQL.
+POSTGRES_DB=dbwrest                    # Имя базы данных.
+POSTGRES_SERVER=db                     # Хост базы данных (имя сервиса db в docker-compose.yml).
+POSTGRES_PORT=5432                     # Порт PostgreSQL внутри контейнера (5432, а не 5000).
+
+# Настройки VK API для получения новостей.
+VK_ACCESS_TOKEN=your_vk_access_token   # Токен доступа VK API (замените на реальный).
+VK_GROUP_ID=your_group_id              # ID группы VK (например, 12345678, замените на реальный).
