--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'  # Добавьте версию в начало файла
+version: '3.8'
 
 services:
   db:
@@ -21,8 +21,55 @@ services:
                -c wal_buffers=16MB
                -c default_statistics_target=100
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB" ]
+      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
       interval: 30s
       timeout: 10s
       retries: 5
+    restart: unless-stopped
+
+  redis:
+    image: redis:7-alpine
+    container_name: redis_container
+    ports:
+      - "6379:6379"
+    restart: unless-stopped
+
+  fastapi:
+    build:
+      context: ..
+      dockerfile: Dockerfile
+    container_name: fastapi_container
+    env_file:
+      - ./.env
+    ports:
+      - "8888:8888"
+    depends_on:
+      - db
+      - redis
+    restart: unless-stopped
+
+  celery:
+    build:
+      context: ..
+      dockerfile: Dockerfile
+    container_name: celery_container
+    env_file:
+      - ./.env
+    command: celery -A fastapi_app.celery_app worker --loglevel=info
+    depends_on:
+      - redis
+      - db
+    restart: unless-stopped
+
+  celery-beat:
+    build:
+      context: ..
+      dockerfile: Dockerfile
+    container_name: celery_beat_container
+    env_file:
+      - ./.env
+    command: celery -A fastapi_app.celery_app beat --loglevel=info
+    depends_on:
+      - redis
+      - db
     restart: unless-stopped
