--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,8 @@ asyncpg==0.29.0
 bcrypt==4.1.2
 passlib[bcrypt]==1.7.4
 fastadmin[fastapi,django]
+aiogram[redis]
+prometheus-fastapi-instrumentator
+celery
+redis
+tenacity
