--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -2,74 +2,96 @@ version: '3.8'
 
 services:
   db:
-    image: postgres:17-alpine
+    image: postgres:16
     container_name: postgres_container
     env_file:
       - ./.env
-    environment:
-      PGDATA: /var/lib/postgresql/data/pgdata
     ports:
       - "5000:5432"
     volumes:
-      - "./pgdata:/var/lib/postgresql/data/pgdata"
-    command: >
-      postgres -c max_connections=1000
-               -c shared_buffers=256MB
-               -c effective_cache_size=768MB
-               -c maintenance_work_mem=64MB
-               -c checkpoint_completion_target=0.7
-               -c wal_buffers=16MB
-               -c default_statistics_target=100
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
+      - postgres_data:/var/lib/postgresql/data
     restart: unless-stopped
 
   redis:
-    image: redis:7-alpine
+    image: redis:7
     container_name: redis_container
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data
     restart: unless-stopped
 
-  fastapi:
-    build:
-      context: ..
-      dockerfile: Dockerfile
-    container_name: fastapi_container
-    env_file:
-      - ./.env
+  # fastapi:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   container_name: fastapi_container
+  #   env_file:
+  #     - ./.env
+  #   environment:
+  #     - RUNNING_IN_DOCKER=true
+  #   ports:
+  #     - "8888:8888"
+  #   depends_on:
+  #     - db
+  #     - redis
+  #   volumes:
+  #     - ./fastapi_app:/app/fastapi_app
+  #   restart: unless-stopped
+
+  pgadmin:
+    image: dpage/pgadmin4:8
+    container_name: pgadmin_container
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@example.com
+      - PGADMIN_DEFAULT_PASSWORD=admin
     ports:
-      - "8888:8888"
+      - "5050:80"
     depends_on:
       - db
-      - redis
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
     restart: unless-stopped
 
-  celery:
-    build:
-      context: ..
-      dockerfile: Dockerfile
-    container_name: celery_container
-    env_file:
-      - ./.env
-    command: celery -A fastapi_app.celery_app worker --loglevel=info
-    depends_on:
-      - redis
-      - db
-    restart: unless-stopped
+  # celery:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   container_name: celery_container
+  #   command: celery -A fastapi_app.vk.celery_app.celery_app worker --loglevel=info
+  #   env_file:
+  #     - ./.env
+  #   environment:
+  #     - RUNNING_IN_DOCKER=true
+  #     - REDIS_HOST=redis
+  #     - POSTGRES_SERVER=db
+  #   depends_on:
+  #     - db
+  #     - redis
+  #   volumes:
+  #     - ./fastapi_app:/app/fastapi_app
+  #   restart: unless-stopped
 
-  celery-beat:
-    build:
-      context: ..
-      dockerfile: Dockerfile
-    container_name: celery_beat_container
-    env_file:
-      - ./.env
-    command: celery -A fastapi_app.celery_app beat --loglevel=info
-    depends_on:
-      - redis
-      - db
-    restart: unless-stopped
+  # celery_beat:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   container_name: celery_beat_container
+  #   command: celery -A fastapi_app.vk.celery_app.celery_app beat --loglevel=info
+  #   env_file:
+  #     - ./.env
+  #   environment:
+  #     - RUNNING_IN_DOCKER=true
+  #     - REDIS_HOST=redis
+  #     - POSTGRES_SERVER=db
+  #   depends_on:
+  #     - db
+  #     - redis
+  #   volumes:
+  #     - ./fastapi_app:/app/fastapi_app
+  #   restart: unless-stopped
+
+volumes:
+  postgres_data:
+  redis_data:
+  pgadmin_data:
