--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -103,6 +103,8 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+      fastapi:
+        condition: service_started
     restart: unless-stopped
     deploy:
       resources:
@@ -126,6 +128,8 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+      fastapi:
+        condition: service_started
     restart: unless-stopped
     deploy:
       resources:
