--- a/infra/docker-compose.production.yml
+++ b/infra/docker-compose.production.yml
@@ -36,7 +36,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.25'
+          cpus: '0.2'
           memory: 256M
 
   pgadmin:
@@ -58,8 +58,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.25'
-          memory: 256M
+          cpus: '0.1'
+          memory: 128
 
   fastapi:
     image: blathata/wrest_backend:latest
@@ -80,8 +80,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '1.0'
-          memory: 1G
+          cpus: '0.3'
+          memory: 512M
 
   celery:
     image: blathata/wrest_backend:latest
@@ -103,8 +103,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.5'
-          memory: 512M
+          cpus: '0.2'
+          memory: 256M
 
   celery_beat:
     image: blathata/wrest_backend:latest
@@ -126,8 +126,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.5'
-          memory: 512M
+          cpus: '0.1'
+          memory: 128M
 
 volumes:
   postgres_data:
