--- a/infra/docker-compose.production.yml
+++ b/infra/docker-compose.production.yml
@@ -59,7 +59,7 @@ services:
       resources:
         limits:
           cpus: '0.1'
-          memory: 128
+          memory: 128M
 
   fastapi:
     image: blathata/wrest_backend:latest
