--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ pydantic-settings==2.5.0
 asyncpg==0.29.0
 bcrypt==4.1.2
 passlib[bcrypt]==1.7.4
-fastadmin[fastapi,django]
+fastadmin==0.2.22
 aiogram[redis]
 prometheus-fastapi-instrumentator
 tenacity
